<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_maps"
        android:title="Maps"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/btn_logout"
        android:title="Log out"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="collapseActionView"
        android:contentDescription="@string/logout"/>

</menu>