...
        android:layout_marginTop="20dp"
        android:text="@string/have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_register_page" />

    <TextView
        android:id="@+id/btn_to_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/purple_500"
...
